--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is the backend for petexchange",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/akashrajum7/petexchange#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "mongoose": "^5.6.4",
     "nodemon": "^1.19.1"
   }
 }
