--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "jquery": "^3.4.1",
     "mongoose": "^5.6.4",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
