--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.4",
+    "mongoose-type-email": "^1.0.11",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
