--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.7.5",
     "mongoose-type-email": "^1.0.11",
-    "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
